Add google site verification

--- a/index.html
+++ b/index.html
@@ -2202,6 +2202,7 @@
         <link rel="search" type="application/opensearchdescription+xml" href="https://maymayscrochets.com/osd.xml" title="May May&#039;s Crochets"/>
         <link rel="search" type="application/opensearchdescription+xml" href="https://s1.wp.com/opensearch.xml" title="WordPress.com"/>
         <meta name="description" content="A simple, free, interactive, and lightweight online row and stitch counter for your crochet and knitting projects. No log-in required."/>
+        <meta name="google-site-verification" content="96zcWmvWQ5Y3mNIvaWmxEFenQrFo3_3DZJ_jO-Lgjtc" />
         <style class='wp-fonts-local'>
             @font-face {
                 font-family: Gabarito;
