--- a/index.html
+++ b/index.html
@@ -204,6 +204,22 @@
             </div>
           </div>
         </div>
+        <div style="margin-top: 8rem;">
+          <h2 class="has-text-align-center wp-block-post-title">About</h2>
+          <p>
+            Hi, I’m May from May May’s Crochets! 👋
+            I’m a crocheter and a coder. I tend to count my rounds and stitches very carefully, and when I was starting out I couldn't find a counter that was exactly what I wanted.
+            So, I built a simple, lightweight stitch and row counter myself that I personally enjoy using — and I’m sharing it for free in case it helps other crocheters or knitters out there too. ✨
+          </p>
+          <p>
+            If you enjoy using this tool and want to support my work, here are a couple easy ways:
+          </p>
+          <ul>
+            <li>💖 <a href="https://www.youtube.com/@MayMaysCrochets?sub_confirmation=1" target="_blank" rel="noopener">Subscribe to my YouTube channel</a> — it really helps me out!</li>
+            <li>🧶 Shop <a href="https://premier-yarns.pxf.io/c/6483850/1583016/18076" target="_blank" rel="noopener nofollow">Premier Yarns through my affiliate link</a> — my absolute favorite yarns to work with!</li>
+          </ul>
+          <p>Happy counting! 🧮</p>
+        </div>
     </main>
   </div>
   <footer class="wp-block-template-part">
