Add Amazon storefront

--- a/index.html
+++ b/index.html
@@ -196,14 +196,15 @@
           <p>
             Hi, I’m May from May May’s Crochets! 👋
             I’m a crocheter and a coder. I tend to count my rounds and stitches very carefully, and when I was starting out I couldn't find a counter that was exactly what I wanted.
-            So, I built a simple, lightweight stitch and row counter myself that I personally enjoy using — and I’m sharing it for free in case it helps other crocheters or knitters out there too. ✨
+            So, I built this simple, lightweight stitch and row counter myself that I personally enjoy using — and figured I'd share it for free in case it helps other crocheters or knitters out there too. ✨
           </p>
           <p>
             If you enjoy using this tool and want to support my work, here are a couple easy ways:
           </p>
           <ul>
-            <li>💖 <a href="https://www.youtube.com/@MayMaysCrochets?sub_confirmation=1" target="_blank" rel="noopener">Subscribe to my YouTube channel</a> — it really helps me out!</li>
-            <li>🧶 Shop <a href="https://premier-yarns.pxf.io/c/6483850/1583016/18076" target="_blank" rel="noopener nofollow">Premier Yarns through my affiliate link</a> — my absolute favorite yarns to work with!</li>
+            <li>💖 <a href="https://www.youtube.com/@MayMaysCrochets?sub_confirmation=1" target="_blank" rel="noopener">Subscribe to my YouTube channel</a> where I share amigurumi makes, free pattern roundups, and my learning-to-crochet journey — it really helps me out!</li>
+            <li>🧶 If you're shopping for yarn, use my <a href="https://premier-yarns.pxf.io/c/6483850/1583016/18076" target="_blank" rel="noopener nofollow">Premier Yarns affiliate link</a> (helps support this tool at no extra cost to you) — they're my favorite yarns to work with!</li>
+            <li>🛍️ Check out my <a href="http://amzn.to/49dvaOA" target="_blank" rel="noopener nofollow">Amazon storefront</a> (affiliate link) for all my favorite crochet tools and supplies!</li>
           </ul>
           <p>Happy counting! 🧮</p>
         </div>
