--- a/index.html
+++ b/index.html
@@ -194,12 +194,11 @@
         <div style="margin-top: 8rem;">
           <h2 class="has-text-align-center wp-block-post-title">About</h2>
           <p>
-            Hi, I’m May from May May’s Crochets! 👋
-            I’m a crocheter and a coder. I tend to count my rounds and stitches very carefully, and when I was starting out I couldn't find a counter that was exactly what I wanted.
-            So, I built this simple, lightweight stitch and row counter myself that I personally enjoy using — and figured I'd share it for free in case it helps other crocheters or knitters out there too. ✨
+            Hi, I’m May from May May’s Crochets! 👋 I’m a crocheter and a coder.
+            When I was starting out I couldn't find a stitch & row counter that was simple, lightweight, and worked the way I wanted — so I built one for myself and figured I'd share it for free in case it helps other crocheters or knitters out there too. ✨
           </p>
           <p>
-            If you enjoy using this tool and want to support my work, here are a couple easy ways:
+            If you enjoy using this tool and want to support my work, here are a few easy ways:
           </p>
           <ul>
             <li>💖 <a href="https://www.youtube.com/@MayMaysCrochets?sub_confirmation=1" target="_blank" rel="noopener">Subscribe to my YouTube channel</a> where I share amigurumi makes, free pattern roundups, and my learning-to-crochet journey — it really helps me out!</li>
