--- a/index.html
+++ b/index.html
@@ -198,12 +198,11 @@
             When I was starting out I couldn't find a stitch & row counter that was simple, lightweight, and worked the way I wanted — so I built one for myself and figured I'd share it for free in case it helps other crocheters or knitters out there too. ✨
           </p>
           <p>
-            If you enjoy using this tool and want to support my work, here are a few easy ways:
+            If you enjoy using this tool and want to support my work, here are a couple easy ways:
           </p>
           <ul>
             <li>💖 <a href="https://www.youtube.com/@MayMaysCrochets?sub_confirmation=1" target="_blank" rel="noopener">Subscribe to my YouTube channel</a> where I share amigurumi makes, free pattern roundups, and my learning-to-crochet journey — it really helps me out!</li>
             <li>🧶 If you're shopping for yarn, use my <a href="https://premier-yarns.pxf.io/c/6483850/1583016/18076" target="_blank" rel="noopener nofollow">Premier Yarns affiliate link</a> (helps support this tool at no extra cost to you) — they're my favorite yarns to work with!</li>
-            <li>🛍️ Check out my <a href="http://amzn.to/49dvaOA" target="_blank" rel="noopener nofollow">Amazon storefront</a> (affiliate link) for all my favorite crochet tools and supplies!</li>
           </ul>
           <p>Happy counting! 🧮</p>
         </div>
