Update Premier affiliate link

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </p>
           <ul>
             <li>💖 <a href="https://www.youtube.com/@MayMaysCrochets?sub_confirmation=1" target="_blank" rel="noopener">Subscribe to my YouTube channel</a> where I share amigurumi makes, free pattern roundups, and my learning-to-crochet journey — it really helps me out!</li>
-            <li>🧶 If you're shopping for yarn, use my <a href="https://premier-yarns.pxf.io/c/6483850/1583016/18076" target="_blank" rel="noopener nofollow">Premier Yarns affiliate link</a> (helps support this tool at no extra cost to you) — they're my favorite yarns to work with!</li>
+            <li>🧶 If you're shopping for yarn, use my <a href="https://referral.premieryarns.com/nnw3n" target="_blank" rel="noopener nofollow">Premier Yarns affiliate link</a> (helps support this tool at no extra cost to you) — they're my favorite yarns to work with!</li>
           </ul>
           <p>Happy counting! 🧮</p>
         </div>
