Add Stitch Haven banner

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </script>
 </head>
 <body class="wp-singular page-template-default page page-id-85 wp-custom-logo wp-embed-responsive wp-theme-pubkawaii-chan jps-theme-pub/kawaii-chan customizer-styles-applied jetpack-reblog-enabled">
-<div class="wp-site-blocks">
+<div>
   <header class="wp-block-template-part">
     <div
       class="wp-block-group has-global-padding is-layout-constrained wp-block-group-is-layout-constrained">
@@ -132,6 +132,19 @@
         class="entry-content wp-block-post-content has-global-padding is-layout-constrained wp-block-post-content-is-layout-constrained">
         <p></p>
         <p></p>
+        <!-- Stitch Haven Banner -->
+        <div style="background: linear-gradient(135deg, rgb(255, 206, 236) 0%, rgb(152, 150, 240) 100%); padding: 1rem 1.5rem; text-align: center; margin-bottom: 2rem; border-radius: 12px;">
+          <p style="margin: 0; font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; font-size: 1rem; color: #2929a3; line-height: 1.5;">
+            ✨ <strong>New!</strong> Stitch Haven lets you save patterns, organize your projects, and track progress with built-in counters.
+            <a href="https://stitchhaven.maymayscrochets.com"
+               target="_blank" rel="noopener"
+               style="color: #2929a3; text-decoration: underline; font-weight: 600;"
+               onmouseover="this.style.color='#9b51e0'"
+               onmouseout="this.style.color='#2929a3'">
+              Check it out →
+            </a>
+          </p>
+        </div>
         <div class="counter-wrapper">
           <!-- Rows Counter -->
           <div class="counter-box">
@@ -175,21 +188,7 @@
             </div>
           </div>
         </div>
-        <div style="margin-top: 8rem;">
-          <h2 class="has-text-align-center wp-block-post-title">About</h2>
-          <p>
-            Hi, I’m May from May May’s Crochets! 👋 I’m a crocheter and a coder.
-            When I was starting out I couldn't find a stitch & row counter that was simple, lightweight, and worked the way I wanted — so I built one for myself and figured I'd share it for free in case it helps other crocheters or knitters out there too. ✨
-          </p>
-          <p>
-            If you enjoy using this tool and want to support my work, here are a couple easy ways:
-          </p>
-          <ul>
-            <li>💖 <a href="https://www.youtube.com/@MayMaysCrochets?sub_confirmation=1" target="_blank" rel="noopener">Subscribe to my YouTube channel</a> where I share amigurumi makes, free pattern roundups, and my learning-to-crochet journey — it really helps me out!</li>
-            <li>🧶 If you're shopping for yarn, use my <a href="https://referral.premieryarns.com/nnw3n" target="_blank" rel="noopener nofollow">Premier Yarns affiliate link</a> (helps support this tool at no extra cost to you) — they're my favorite yarns to work with!</li>
-          </ul>
-          <p>Happy counting! 🧮</p>
-        </div>
+      </div>
     </main>
   </div>
   <footer class="wp-block-template-part">
