--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div style="background: linear-gradient(135deg, rgb(255, 206, 236) 0%, rgb(152, 150, 240) 100%); padding: 1rem 1.5rem; text-align: center; margin-bottom: 2rem; border-radius: 12px;">
           <p style="margin: 0; font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; font-size: 1rem; color: #2929a3; line-height: 1.5;">
             ✨ <strong>New!</strong> Stitch Haven lets you save patterns, organize your projects, and track progress with built-in counters.
-            <a href="https://stitchhaven.maymayscrochets.com"
+            <a href="https://stitchhaven.maymayscrochets.com?utm_source=counter"
                target="_blank" rel="noopener"
                style="color: #2929a3; text-decoration: underline; font-weight: 600;"
                onmouseover="this.style.color='#9b51e0'"
